document width bag fixed body, html width update overflow-x: hidden !!!

--- a/src/assets/css/mixins.less
+++ b/src/assets/css/mixins.less
@@ -327,6 +327,9 @@
 }
 
 .textleftsection {
+  &:first-child, &:last-child {
+    
+  }
   &__block {
     @media screen and (max-width: @largetablet) {
       flex-direction: column-reverse;
@@ -404,6 +407,9 @@
   position: relative;
   width: 750px;
   margin: 200px auto 10px auto;
+  @media screen and (max-width: 600px) {
+    width: 500px;
+  }
   @media screen and (max-width: @largetablet) {
     width: 600px;
     font-size: 40px;
@@ -419,10 +425,10 @@
     text-wrap: wrap;
     text-align: center;
   }
-  @media screen and (max-width: 420px) {
+  @media screen and (max-width: 460px) {
     font-size: 26px;
     margin-left: 10px;
-    width: 300px;
+    width: auto;
   }
 }
 .logobrand {
